--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
     "mongoose": "^3.8.20"
   },
   "devDependencies": {
+    "debowerify": "^1.2.0",
     "grunt": "^0.4.5",
+    "grunt-browserify": "^3.2.1",
     "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jscs": "^1.0.0"
+    "grunt-contrib-sass": "^0.8.1",
+    "grunt-jscs": "^1.0.0",
+    "grunt-simple-mocha": "^0.4.0",
+    "mocha": "^2.0.1"
   }
 }
