--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express-server": "^0.4.19",
     "grunt-jscs": "^1.0.0",
     "grunt-simple-mocha": "^0.4.0",
     "mocha": "^2.0.1"
