--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/emailsucks/flybox_server",
   "dependencies": {
     "express": "^4.10.4",
-    "mongoose": "^3.8.20"
+    "mongoose": "^3.8.20",
+    "multiparty": "^4.1.0",
+    "nodemailer": "^1.3.0"
   },
   "devDependencies": {
     "debowerify": "^1.2.0",
