--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/emailsucks/flybox_server",
   "dependencies": {
+    "body-parser": "^1.10.0",
     "express": "^4.10.4",
     "mongoose": "^3.8.20",
     "multiparty": "^4.1.0",
