--- a/.jscsrc
+++ b/.jscsrc
@@ -2,5 +2,6 @@
   "preset": "airbnb",
   "validateQuoteMarks": true,
   "requireMultipleVarDecl": null,
-  "disallowMultipleVarDecl": true
+  "disallowMultipleVarDecl": true,
+  "requireCamelCaseOrUpperCaseIdentifiers": "ignoreProperties"
 }
