--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
   ],
   "dependencies": {
     "angular": "~1.3.6",
-    "angular-route": "~1.3.6"
+    "angular-route": "~1.3.7",
+    "angular-cookies": "~1.3.7",
+    "angular-base64": "~2.0.3"
   }
 }
