--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "postinstall": "bower install && grunt build",
   "repository": {
     "type": "git",
     "url": "https://github.com/emailsucks/flybox_server.git"
