--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.0",
+    "bower": "^1.3.12",
     "express": "^4.10.4",
+    "grunt": "^0.4.5",
     "jwt-simple": "^0.2.0",
     "mongoose": "^3.8.20",
     "multiparty": "^4.1.0",
