--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bower": "^1.3.12",
     "express": "^4.10.4",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "jwt-simple": "^0.2.0",
     "mongoose": "^3.8.20",
     "multiparty": "^4.1.0",
