--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "multiparty": "^4.1.0",
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
-    "passport-http": "^0.2.2"
-  },
-  "devDependencies": {
+    "passport-http": "^0.2.2",
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
     "debowerify": "^1.2.0",
@@ -48,5 +46,7 @@
     "grunt-mongo-drop": "^0.1.1",
     "grunt-simple-mocha": "^0.4.0",
     "mocha": "^2.0.1"
+  },
+  "devDependencies": {
   }
 }
