--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "grunt test",
-    "postinstall": "bower install && grunt build"
+    "postinstall": "npm install grunt-contrib-jshint grunt-jscs grunt-mongo-drop grunt-simple-mocha grunt-contrib-clean grunt-contrib-copy grunt-contrib-sass grunt-browserify grunt-express-server grunt-contrib-watch",
+    "bower install && grunt build"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,9 @@
     "multiparty": "^4.1.0",
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
-    "passport-http": "^0.2.2",
+    "passport-http": "^0.2.2"
+  },
+  "devDependencies": {
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
     "debowerify": "^1.2.0",
@@ -46,7 +49,5 @@
     "grunt-mongo-drop": "^0.1.1",
     "grunt-simple-mocha": "^0.4.0",
     "mocha": "^2.0.1"
-  },
-  "devDependencies": {
   }
 }
