--- a/package.json
+++ b/package.json
@@ -22,21 +22,24 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.0",
     "express": "^4.10.4",
+    "form-data": "^0.2.0",
     "jwt-simple": "^0.2.0",
     "mongoose": "^3.8.20",
     "multiparty": "^4.1.0",
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
-    "passport-http": "^0.2.2"
+    "passport-http": "^0.2.2",
+    "request": "^2.51.0"
   },
   "devDependencies": {
+    "bower": "^1.3.12",
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
     "debowerify": "^1.2.0",
+    "form-data": "^0.2.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
     "grunt-cli": "^0.1.13",
-    "bower": "^1.3.12",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
