--- a/.jshintrc
+++ b/.jshintrc
@@ -1,3 +1,23 @@
 {
+  "globals": {
+    "describe"   : false,
+    "it"         : false,
+    "to"         : false,
+    "ok"         : false,
+    "be"         : false,
+    "before"     : false,
+    "beforeEach" : false,
+    "after"      : false,
+    "afterEach"  : false,
+    "equal"      : false,
+    "angular" :false
+  },
+  "globalstrict": true,
+  "quotmark": false,
+  "smarttabs": true,
+  "trailing": true,
+  "undef": true,
+  "unused": true,
+  "indent": 2,
   "node": true
 }
