--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
-    "request": "^2.51.0"
+    "request": "^2.51.0",
+    "socket.io": "^1.2.1"
   },
   "devDependencies": {
     "bower": "^1.3.12",
