--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "angular": "~1.3.6",
     "angular-route": "~1.3.7",
     "angular-cookies": "~1.3.7",
-    "angular-base64": "~2.0.3"
+    "angular-base64": "~2.0.3",
+    "angular-socket-io": "~0.7.0",
+    "socket.io-client": "~1.2.1"
   }
 }
