--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.4.19",
     "grunt-jscs": "^1.0.0",
     "grunt-mongo-drop": "^0.1.1",
+    "grunt-sass": "^0.17.0",
     "grunt-simple-mocha": "^0.4.0",
-    "mocha": "^2.0.1"
+    "mocha": "^2.0.1",
+    "node-sass": "^1.2.3"
   }
 }
