--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "grunt test",
-    "postinstall": "grunt build"
+    "postinstall": "./node_modules/grunt-cli/bin/grunt build"
   },
   "repository": {
     "type": "git",
