--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "grunt test",
-    "postinstall": "./node_modules/grunt-cli/bin/grunt build"
+    "postinstall": "bower install && grunt build"
   },
   "repository": {
     "type": "git",
@@ -25,15 +25,14 @@
     "express": "^4.10.4",
     "form-data": "^0.2.0",
     "jwt-simple": "^0.2.0",
+    "grunt-cli": "^0.1.13",
     "mongoose": "^3.8.20",
     "multiparty": "^4.1.0",
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
     "request": "^2.51.0",
-    "socket.io": "^1.2.1"
-  },
-  "devDependencies": {
+    "socket.io": "^1.2.1",
     "bower": "^1.3.12",
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
@@ -52,5 +51,7 @@
     "grunt-simple-mocha": "^0.4.0",
     "mocha": "^2.0.1",
     "node-sass": "^1.2.3"
+  },
+  "devDependencies": {
   }
 }
