--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "socket.io": "^1.2.1"
   },
   "devDependencies": {
+    "angular-mocks": "^1.3.7",
     "bower": "^1.3.12",
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
@@ -47,8 +48,13 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.4.19",
     "grunt-jscs": "^1.0.0",
+    "grunt-karma": "^0.9.0",
     "grunt-mongo-drop": "^0.1.1",
     "grunt-simple-mocha": "^0.4.0",
+    "jasmine-core": "^2.1.3",
+    "karma": "^0.12.28",
+    "karma-jasmine": "^0.3.2",
+    "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^2.0.1"
   }
 }
