--- a/package.json
+++ b/package.json
@@ -22,21 +22,12 @@
     "aws-sdk": "^2.1.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.0",
-    "express": "^4.10.4",
-    "form-data": "^0.2.0",
-    "jwt-simple": "^0.2.0",
-    "grunt-cli": "^0.1.13",
-    "mongoose": "^3.8.20",
-    "multiparty": "^4.1.0",
-    "nodemailer": "^1.3.0",
-    "passport": "^0.2.1",
-    "passport-http": "^0.2.2",
-    "request": "^2.51.0",
-    "socket.io": "^1.2.1",
     "bower": "^1.3.12",
     "chai": "^1.10.0",
     "chai-http": "^1.0.0",
     "debowerify": "^1.2.0",
+    "express": "^4.10.4",
+    "form-data": "^0.2.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
     "grunt-cli": "^0.1.13",
@@ -49,9 +40,17 @@
     "grunt-mongo-drop": "^0.1.1",
     "grunt-sass": "^0.17.0",
     "grunt-simple-mocha": "^0.4.0",
+    "jwt-simple": "^0.2.0",
     "mocha": "^2.0.1",
-    "node-sass": "^1.2.3"
+    "mongoose": "^3.8.20",
+    "multiparty": "^4.1.0",
+    "node-sass": "^1.2.3",
+    "nodemailer": "^1.3.0",
+    "passport": "^0.2.1",
+    "passport-http": "^0.2.2",
+    "request": "^2.51.0",
+    "socket.io": "^1.2.1",
+    "underscore": "^1.7.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
